delivery 1st time

--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Directive by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Gold Exchange --Welcome!--</title>
@@ -17,7 +13,7 @@
 			<div id="header">
 				<!-- <span class="logo icon fa-paper-plane"></span> -->
 				<h1>Welcome to Gold Exchange!</h1>
-				<p>ようこそGold Exchangeへ！</p>
+				<p>Gold Exchangeへようこそ！</p>
 				<ul class="actions special">
 					<li><a href="http://www.goldexchange.jp/" class="button">Get started</a></li>
 				</ul>
@@ -30,10 +26,6 @@
 				<header class="major container medium">
 					<h2>	Gold Exchangeでは、金をオンライン上で相対取引することができます。<a href="#"></a><br />
 						さらに24時間365日取引が可能！<a href="#"></a></h2>
-					<!--
-					<p>Tellus erat mauris ipsum fermentum<br />
-					etiam vivamus nunc nibh morbi.</p>
-					-->
 				</header>
 
 				<div class="box alt container">
@@ -79,30 +71,10 @@
 		<!-- Footer -->
 			<div id="footer">
 				<div class="container medium">
-					<!-- <img src="images/header_1.jpg" alt="gold" class="container medium"> -->
 					<header class="major last">
 						<h2>Questions or comments?</h2>
 					</header>
 					<p>Gold Exchangeに関するご質問、ご相談は下記よりお問い合わせください。</p>
-
-					<!-- <form method="post" action="#">
-						<div class="row">
-							<div class="col-6 col-12-mobilep">
-								<input type="text" name="name" placeholder="Name" />
-							</div>
-							<div class="col-6 col-12-mobilep">
-								<input type="email" name="email" placeholder="Email" />
-							</div>
-							<div class="col-12">
-								<textarea name="message" placeholder="Message" rows="6"></textarea>
-							</div>
-							<div class="col-12">
-								<ul class="actions special">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</div>
-						</div>
-					</form> -->
 
 					<ul class="icons">
 						<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
