delete url on image

--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="" class="image icon solid fa-signal">
+						<div class="image icon solid fa-signal">
 							<img src="images/gold_bars.jfif" alt="" class="image icon solid fa-signal" />
-						</a>
+						</div>
 						<div class="content">
 							<h3>なぜ、金なのか</h3>
 							<p>金で回避できるリスクは大きく３つあります。「有事」「暴落」「目減り」です。これらのリスクが回避できるとして、世界中から注目を集めています。</p>
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="" class="image icon solid fa-code">
+						<div class="image icon solid fa-code">
 							<img src="images/us_bank.jfif" alt="" class="image icon solid fa-code" />
-						</a>
+						</div>
 						<div class="content">
 							<h3>金の安定性</h3>
 							<p>３つのリスクが回避できる金は安定的な資産として注目されており、実際にサブプライムローンの際にも金の価格は上昇しました。世界経済が不安定なときこそ、その強さを発揮するとして支持を集めています。</p>
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="" class="image icon solid fa-mobile-alt">
+						<div class="image icon solid fa-mobile-alt">
 							<img src="images/watch.jfif" alt="" class="image icon solid fa-mobile-alt" />
-						</a>
+						</div>
 						<div class="content">
 							<h3>Let's start trading!</h3>
 							<p>Gold Exchangeではオンラインで24時間365日取引をすることができます。ご自身で売却額や購入額を決め、自由な取引を体験しましょう！</p>
