added sentence for SEO

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Gold Exchange --Welcome!--</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="keywords" content="金取引,相対取引,株式会社Tandt,金,gold,exchange,Gold Exchange,金売買,売買,チャート,chart">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
