--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<h1>Welcome to Gold Exchange!</h1>
 				<p>Gold Exchangeへようこそ！</p>
 				<ul class="actions special">
-					<li><a href="http://www.goldexchange.jp/" class="button">Get started</a></li>
+					<li><a href="http://www.goldexchange.jp/" class="button">Get Started!</a></li>
 				</ul>
 
 			</div>
@@ -36,16 +36,17 @@
 						</div>
 						<div class="content">
 							<h3>なぜ、金なのか</h3>
-							<p>金で回避できるリスクは大きく３つあります。「有事」「暴落」「目減り」です。これらのリスクが回避できるとして、世界中から注目を集めています。</p>
+							<p>金で回避できるリスクは大きく３つあります。「有事」「暴落」「目減り」です。これらのリスクが回避できるとして、サブプライムローンの際には金の価格が上昇したほどです。世界経済が不安定なときこそ、その強さを発揮するとして支持を集めています。</p>
 						</div>
 					</section>
 					<section class="feature right">
 						<div class="image icon solid fa-code">
-							<img src="images/us_bank.jfif" alt="" class="image icon solid fa-code" />
+							<img src="images/gold-coin.jfif" alt="" class="image icon solid fa-code" />
 						</div>
 						<div class="content">
-							<h3>金の安定性</h3>
-							<p>３つのリスクが回避できる金は安定的な資産として注目されており、実際にサブプライムローンの際にも金の価格は上昇しました。世界経済が不安定なときこそ、その強さを発揮するとして支持を集めています。</p>
+							<h3>価値の上昇</h3>
+							<p>金の価格は約30年前と比べて約3倍(1990年平均1,826円/g *1)になっており、今後も価格が上昇していくと見られています。リスク回避ができ、安定的に価値が上昇していく金は、守りの要としての圧倒的な存在となっています。</p>
+							<a href="https://gold.tanaka.co.jp/commodity/souba/y-gold.php">*1 田中貴金属より</a>
 						</div>
 					</section>
 					<section class="feature left">
@@ -54,16 +55,19 @@
 						</div>
 						<div class="content">
 							<h3>Let's start trading!</h3>
-							<p>Gold Exchangeではオンラインで24時間365日取引をすることができます。ご自身で売却額や購入額を決め、自由な取引を体験しましょう！</p>
+							<p>Step1：アカウント登録<br>
+								Step2：Goldを預ける、もしくは入金する<br>
+								Step3：トレード開始！<br>
+								たったこれだけで、オンラインで24時間365日取引をすることができます。<br>
+								さぁ、自由な取引を体験しましょう！</p>
 						</div>
 					</section>
 				</div>
 
 				<footer class="major container medium">
-					<h3>さあ、Gold Exchangeを始めましょう！</h3>
-					<p>下記 Get started からすぐ始めることができます。</p>
+					<h3>Gold Exchangeはこちらから始めることができます！</h3>
 					<ul class="actions special">
-						<li><a href="http://www.goldexchange.jp/" class="button">Get started</a></li>
+						<li><a href="http://www.goldexchange.jp/" class="button">Get Started!</a></li>
 					</ul>
 				</footer>
 
@@ -75,7 +79,7 @@
 					<header class="major last">
 						<h2>Questions or comments?</h2>
 					</header>
-					<p>Gold Exchangeに関するご質問、ご相談は下記よりお問い合わせください。</p>
+					<p>Gold Exchangeに関するご質問、ご相談は<a href="https://tandtgo.com/">こちら</a>よりお問い合わせください。</p>
 
 					<ul class="icons">
 						<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
